Added Kafka for install only
Updated the README to include the PHoenix

Downgrade the HBase to 1.4.9 to be compatible with Phoenix 4.14.1

Downgrade the Phoenix to 4.14.1 to support Hadoop 2.x (+Spark 2.4)

Enable the Phoenix QueryServer by define the HBASE_PID_DIR